--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-lightning
-monai
-segmentation_models_pytorch
+lightning= "^2.5.0.post0"
+monai= "^1.4.0"
+segmentation_models_pytorch="^0.3.4"
 
 
 [build-system]
