--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ lightning= "^2.5.0.post0"
 monai= "^1.4.0"
 segmentation_models_pytorch="^0.3.4"
 huggingface_hub="^0.25.2"
+czifile="~2019.7.2"
 
 
 [build-system]
