--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dnafiber"
-version = "0.1.2"
+version = "0.1.3"
 description = ""
 authors = ["ClementPla <clement.playout@polymtl.ca>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ monai= "^1.4.0"
 segmentation_models_pytorch="^0.3.4"
 huggingface_hub="^0.25.2"
 czifile="~2019.7.2"
-
+tifffile="~2024.8.10"
 
 [build-system]
 requires = ["poetry-core"]
