--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ torchmetrics = "1.6.3"
 albumentations = "2.0.3"
 streamlit_image_coordinates = "0.2.1"
 catppuccin = "2.4.1"
-
+scikit-image = "0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
