--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,10 +10,13 @@ trainer:
 model:
   encoder_name: mit_b2
   arch: unet
+  encoder_weights: imagenet
 
 
 data:
   shape: 1024
-  batch_size: 16
-  root_img: /home/clement/Documents/data/DNAFiber/train/
+  batch_size: 24
+  root_img: /home/clement/Documents/data/DNAFiber/
   crop_size: [512, 512]
+  use_cache: False
+  cache_option: duplicated_memory
