--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ plotly = "6.0.1"
 pandas = "2.2.3"
 scipy = "1.15.2"
 numpy = "^1.22.4"
-matplotlib = "3.9.1"
+matplotlib = "^3.10.3"
 bokeh = "^3.0.0"
 streamlit_bokeh = "^3.0.0"
 torchmetrics = "1.6.3"
