--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ albumentations = "2.0.3"
 streamlit_image_coordinates = "0.2.1"
 catppuccin = "2.4.1"
 scikit-image = "0.25.2"
+kornia = "0.7.3"
 
 [build-system]
 requires = ["poetry-core"]
