Start fix maybe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,4 @@ joblib = "1.4.2"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
-DNAI = "start:main"
+DNAI = "dnafiber.start:main"
