--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,6 @@ joblib = "1.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-[tool.poetry.scripts]
+
+[project.scripts]
 DNAI = "dnafiber.start:main"
