--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,5 @@ joblib = "1.4.2"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[project.scripts]
+[tool.poetry.scripts]
 DNAI = "dnafiber.start:main"
