--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,15 +8,17 @@ trainer:
   check_val_every_n_epoch: 100
 
 model:
-  encoder_name: mit_b2
-  arch: unet
-  encoder_weights: imagenet
+  # encoder_name: mit_b2
+  arch: steered_cnn
+  # encoder_weights: imagenet
 
 
 data:
   shape: 1024
-  batch_size: 24
+  batch_size: 48
   root_img: /home/clement/Documents/data/DNAFiber/
   crop_size: [512, 512]
-  use_cache: False
+  use_cache: True
   cache_option: duplicated_memory
+  sato_filter: False
+  num_workers: 16
