--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -18,7 +18,7 @@ data:
   batch_size: 48
   root_img: /home/clement/Documents/data/DNAFiber/
   crop_size: [512, 512]
-  use_cache: True
+  use_cache: False
   cache_option: duplicated_memory
   sato_filter: False
   num_workers: 16
