--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,21 @@ description = ""
 authors = ["ClementPla <clement.playout@polymtl.ca>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+DNAI = "dnafiber.start:main"
+
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "semver"
+format = "{base}+{commit}"
+write_to = "dnafiber/_version.py"
+dirty = true
+
+[build-system]
+requires = ["poetry-core>=1.1.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
+
 [tool.poetry.dependencies]
 python = "^3.10"
 lightning= "^2.5.0.post0"
@@ -31,10 +46,3 @@ numba = "0.60.0"
 joblib = "1.4.2"
 ttach = "0.0.3"
 
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-DNAI = "dnafiber.start:main"
