--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,14 @@ readme = "README.md"
 [tool.poetry.scripts]
 DNAI = "dnafiber.start:main"
 
-[tool.poetry-dynamic-versioning]
-enable = true
-vcs = "git"
-style = "semver"
-format = "{base}+{commit}"
-write_to = "dnafiber/_version.py"
-dirty = true
+[tool.setuptools_scm]
+write_to="dnafiber/_version_.py"
+version_scheme="guess-next-dev"
+local_scheme="node-and-date"
 
 [build-system]
-requires = ["poetry-core>=1.1.0", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["setuptools>=42", "setuptools-scm>=8"]
+build-backend = "setuptools.build_meta"
 
 [tool.poetry.dependencies]
 python = "^3.10"
